# microwm

./: .gitignore  CMakeLists.txt  Makefile  README.md  annotated.html  annotated.js  bug.html  classes.html  config.c  config.h  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  icccm.c  icccm.h  index.html  main.c  main_8c.html  main_8c.js  main_8c_source.html  md__r_e_a_d_m_e.html  microwm.c  microwm.h  microwm_8c.html  microwm_8c.js  microwm_8c_source.html  microwm_8h.html  microwm_8h.js  microwm_8h_source.html  navtree.js  navtreeindex0.js  pages.html  (+15 more)
bitmap/: close.xpm  full.xpm  iconify.xpm  unfull.xpm
doc/: doxyfile  microwm.config_sample
